--- a/src/TwitchMemeAlertsAuto.CLI/TwitchMemeAlertsAuto.CLI.csproj
+++ b/src/TwitchMemeAlertsAuto.CLI/TwitchMemeAlertsAuto.CLI.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
-		<TargetFramework>net8.0</TargetFramework>
+		<TargetFramework>net10.0</TargetFramework>
 		<AssemblyName>tmaa</AssemblyName>
 		<ApplicationIcon>..\..\favicon-96x96.ico</ApplicationIcon>
 		<PublishAot>true</PublishAot>
@@ -14,13 +14,15 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.7" />
-		<PackageReference Include="NowaLone.IrcNet.Client" Version="1.0.4" />
-		<PackageReference Include="NowaLone.TwitchChat.Client" Version="1.0.0" />
 		<PackageReference Include="System.CommandLine" Version="2.0.0-beta6.25358.103" />
 		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\TwitchMemeAlertsAuto.Core\TwitchMemeAlertsAuto.Core.csproj" />
 	</ItemGroup>
 
 </Project>
