--- a/src/TwitchMemeAlertsAuto.CLI/TwitchMemeAlertsAuto.CLI.csproj
+++ b/src/TwitchMemeAlertsAuto.CLI/TwitchMemeAlertsAuto.CLI.csproj
@@ -9,13 +9,13 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="GitVersion.MsBuild" Version="6.3.0">
+		<PackageReference Include="GitVersion.MsBuild" Version="6.5.1">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.7" />
-		<PackageReference Include="System.CommandLine" Version="2.0.0-beta6.25358.103" />
-		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0">
+		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="10.0.2" />
+		<PackageReference Include="System.CommandLine" Version="2.0.2" />
+		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="10.0.102">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
