--- a/src/TwitchMemeAlertsAuto.WPF/TwitchMemeAlertsAuto.WPF.csproj
+++ b/src/TwitchMemeAlertsAuto.WPF/TwitchMemeAlertsAuto.WPF.csproj
@@ -9,6 +9,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Autoupdater.NET.Official" Version="1.9.2" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.2">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
