--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Create WPF ZIP archive
         run: |
           $version = "${{ github.ref_name }}"
-          $zipName = "tmaa-wpf-${version}.zip"
+          $zipName = "tmaa-wpf.zip"
           $publishPath = Join-Path $PWD 'src\TwitchMemeAlertsAuto.WPF\publish-wpf\'
           Compress-Archive -Path (Join-Path $publishPath '*') -DestinationPath $zipName -Force
           Write-Host "Created $zipName from $publishPath"
@@ -45,12 +45,17 @@ jobs:
       - name: Publish CLI
         run: dotnet publish src/TwitchMemeAlertsAuto.CLI/TwitchMemeAlertsAuto.CLI.csproj --configuration Release --runtime win-x64 --self-contained true /p:PublishDir=.\publish-cli\ /p:PublishSingleFile=true /p:PublishReadyToRun=true /p:IncludeNativeLibrariesForSelfExtract=true
 
+      - name: Publish AutoUpdater.xml
+        run: echo "<?xml version="1.0" encoding="UTF-8"?><item><version>${{ github.ref_name }}.0</version><url>https://github.com/NowaLone/TwitchMemeAlertsAuto/releases/latest/download/tmaa-wpf.zip</url><changelog>https://github.com/NowaLone/TwitchMemeAlertsAuto/releases</changelog><mandatory>false</mandatory></item>" | Out-File -FilePath src\TwitchMemeAlertsAuto.WPF\publish-wpf\AutoUpdater.xml
+
+
       - name: Upload assets to GitHub Release
         uses: softprops/action-gh-release@v2
         with:
           files: |
             ${{ env.WPF_ZIP }}
             src/TwitchMemeAlertsAuto.CLI/publish-cli/tmaa.exe
+            src/TwitchMemeAlertsAuto.WPF/publish-wpf/AutoUpdater.xml
           body_path: CHANGELOG.md
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
