feat: use httpClientFactory

--- a/src/TwitchMemeAlertsAuto.Core/TwitchMemeAlertsAuto.Core.csproj
+++ b/src/TwitchMemeAlertsAuto.Core/TwitchMemeAlertsAuto.Core.csproj
@@ -7,6 +7,7 @@
 	<ItemGroup>
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
 		<PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="10.0.2" />
+		<PackageReference Include="Microsoft.Extensions.Http" Version="10.0.2" />
 		<PackageReference Include="NowaLone.IrcNet.Client" Version="1.0.4" />
 		<PackageReference Include="NowaLone.TwitchChat.Client" Version="1.0.0" />
 		<PackageReference Include="TwitchLib.Api" Version="3.10.2" />
