--- a/src/TwitchMemeAlertsAuto.Core/TwitchMemeAlertsAuto.Core.csproj
+++ b/src/TwitchMemeAlertsAuto.Core/TwitchMemeAlertsAuto.Core.csproj
@@ -5,6 +5,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="AF.Securify.ShellLink" Version="1.1.0" />
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
 		<PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="10.0.2" />
 		<PackageReference Include="Microsoft.Extensions.Http" Version="10.0.2" />
