feat: add tray icon

--- a/src/TwitchMemeAlertsAuto.WPF/TwitchMemeAlertsAuto.WPF.csproj
+++ b/src/TwitchMemeAlertsAuto.WPF/TwitchMemeAlertsAuto.WPF.csproj
@@ -6,6 +6,7 @@
 		<AssemblyName>tmaa</AssemblyName>
 		<ApplicationIcon>..\..\favicon-96x96.ico</ApplicationIcon>
 		<UseWPF>true</UseWPF>
+		<UseWindowsForms>true</UseWindowsForms>
 	</PropertyGroup>
 
 	<ItemGroup>
